--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     
 </head>
 <body>
+    <div class="grid-container">
+        <div class="grid-items">1</div>
+        <div class="grid-items">2</div>
+        <div class="grid-items">3</div>
+        <div class="grid-items">4</div>
+        <div class="grid-items">5</div>
+        <div class="grid-items">6</div>
+        <div class="grid-items">7</div>
+        <div class="grid-items">8</div>
+        <div class="grid-items">9</div>
+        <div class="grid-items">10</div>
+        <div class="grid-items">11</div>
+        <div class="grid-items">12</div>
     
 </body>
 </html>
