--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-items">1</div>
+        <div class="grid-items grid1">1</div>
         <div class="grid-items">2</div>
         <div class="grid-items">3</div>
         <div class="grid-items">4</div>
